--- a/source/assets/stylesheets/scss/components/_search.scss
+++ b/source/assets/stylesheets/scss/components/_search.scss
@@ -75,6 +75,7 @@
     &:before {
       content: attr(data-message);
       order: 1;
+      margin-right: 0.625em;
     }
 
     &:after {
